[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Levels/TheoryAndPractice.gd" type="Script" id=1]
[ext_resource path="res://Game/Backgrounds/RandomBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Buttons/TopicButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Buttons/Commons/Back.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("VBox:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="TheoryAndPractice" type="Node" index="0"]
script = ExtResource( 1 )

[node name="RandomBackground" parent="." index="0" instance=ExtResource( 2 )]

[node name="VBox" type="VBoxContainer" parent="." index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -226.0
margin_right = 200.0
margin_bottom = 226.0
rect_scale = Vector2( 0, 0 )
rect_pivot_offset = Vector2( 200, 226 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Theory" parent="VBox" index="0" instance=ExtResource( 3 )]
editor/display_folded = true
margin_right = 400.0
margin_bottom = 224.0

[node name="Label" parent="VBox/Theory" index="0"]
text = "Teoría"

[node name="Practice" parent="VBox" index="1" instance=ExtResource( 3 )]
editor/display_folded = true
margin_top = 228.0
margin_right = 400.0
margin_bottom = 452.0
disabled = true

[node name="Label" parent="VBox/Practice" index="0"]
text = "Práctica"

[node name="Back" parent="." index="2" instance=ExtResource( 4 )]
rect_scale = Vector2( 0, 0 )
rect_pivot_offset = Vector2( 62, 62 )
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="Anim" type="AnimationPlayer" parent="." index="3"]
root_node = NodePath("..")
autoplay = "show"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 1 )
blend_times = [  ]

[connection signal="pressed" from="VBox/Theory" to="." method="_on_Theory_pressed"]
[connection signal="pressed" from="VBox/Practice" to="." method="_on_Practice_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[editable path="VBox/Theory"]

[editable path="VBox/Practice"]
